<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".fitness">


    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:flipInterval="2000"
        android:autoStart="true"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:background="@drawable/man1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/man2"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/man3"
            tools:ignore="ContentDescription" />

    </ViewFlipper>

    <TextView
        android:id="@+id/try_out_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="260dp"
        android:text="@string/try_out"
        android:textColor="@color/white"
        android:fontFamily="@font/lora"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/music_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/music_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_text"
        android:contentDescription="@string/exercise" />

    <TextView
        android:id="@+id/tips_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="@string/tips"
        android:textColor="@color/white"
        android:fontFamily="@font/lora_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/music_text"
        app:layout_constraintTop_toBottomOf="@+id/tips_button" />

    <ImageView
        android:id="@+id/diet_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/diet_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/bmi_button"
        app:layout_constraintTop_toTopOf="@+id/bmi_button"
        android:contentDescription="@string/exercise" />

    <TextView
        android:id="@+id/diet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/diet"
        android:textColor="@color/white"
        android:fontFamily="@font/lora_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toEndOf="@+id/bmi_text"
        app:layout_constraintTop_toBottomOf="@+id/diet_button" />

    <ImageView
        android:id="@+id/bmi_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/bmi_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/try_out_text"
        android:contentDescription="@string/exercise" />

    <TextView
        android:id="@+id/music_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="20dp"
        android:text="@string/music"
        android:textColor="@color/white"
        android:fontFamily="@font/lora_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_button" />

    <TextView
        android:id="@+id/bmi_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/bmi"
        android:textColor="@color/white"
        android:fontFamily="@font/lora_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_button" />

    <ImageView
        android:id="@+id/tips_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/tips_icon"
        android:contentDescription="@string/exercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toEndOf="@+id/music_button"
        app:layout_constraintTop_toBottomOf="@+id/diet_button" />

</androidx.constraintlayout.widget.ConstraintLayout>